# ai_challenge_llm

./: .gitignore  README.md  pyproject.toml
backend/: .env.example  docker-compose.yml  main.py  pyproject.toml
backend/data/: crawl_jd_list.py  crawl_jd_text.py
backend/postgres/init/: init.sql
backend/scripts/: api_list.sh  dev_up.sh
backend/src/api/: deps.py
backend/src/api/routes/: __init__.py  catalog.py  collect.py  company_analysis.py  guardrail.py  jd_generation.py  llm_queue.py  styles.py
backend/src/api/schemas/: catalog.py  collect.py  common.py  company_analysis.py  jd_generation.py  llm_queue_schema.py  styles.py
backend/src/domain/: job_entities.py
backend/src/domain/company_analysis/: models.py
backend/src/domain/guardrail/: ports.py  types.py
backend/src/domain/jd_generation/: models.py
backend/src/infrastructure/: crawler.py  http_client.py
backend/src/infrastructure/db/: database.py  models.py  repositories.py  repository.py
backend/src/infrastructure/guardrails/: moderation_openai.py  pii_scrubber.py
backend/src/infrastructure/llm/: factory.py  interface.py  json_schemas.py  openai_client.py
backend/src/infrastructure/prompt/: manager.py  repository.py  schema.py  sync.py
backend/src/infrastructure/queue/: __init__.py  config.py  engine.py  metrics.py  models.py  repo.py  scheduler.py
backend/src/service/: catalog.py  collector.py  company_analysis.py  document_analysis.py  guardrail.py  guardrails.py  jd_generation.py  knowledge_catalog.py  llm_queue.py  resource_monitor.py  trend_recommendation.py
scripts/: run.sh  (+2 more)
(+63 files in other folders)
