# pyproject.toml
[project]
name = "jd-generator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.13.4",
    "better-profanity>=0.7.0",
    "black>=25.1.0",
    "colorama>=0.4.6",
    "fastapi>=0.116.1",
    "greenlet>=3.2.4",
    "jinja2>=3.1.6",
    "korcen>=1.0.2",
    "langchain>=0.3.27",
    "openai>=1.100.2",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "tqdm>=4.67.1",
    "uvicorn[standard]>=0.35.0",
]

[tool.uv]
